Fix label alignment

--- a/static/sass/_pattern_cve.scss
+++ b/static/sass/_pattern_cve.scss
@@ -312,5 +312,9 @@
         width: auto;
       }
     }
+
+    .p-icon--chevron-down {
+      margin-right: 1rem;
+    }
   }
 }
